feat: pc and lecture

--- a/class/lecture_13/summary.ipynb
+++ b/class/lecture_13/summary.ipynb
@@ -283,6 +283,233 @@
     "- For n = 1,  it is the line\n",
     "- For n = 2, it is the plane\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Gram-Schmidt Orthogonalised (GSO) Basis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **Gram-Schmidt process** is used to find a set of orthogonal vectors that are linearly independent and span the same vector space as the original set. Below are details about the process, how to evaluate lattice bases, and the distinction between good and bad bases.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Steps of the Gram-Schmidt Process\n",
+    "\n",
+    "1. **First Vector (\\( b_1^* \\))**:\n",
+    "   - Start with the first vector \\( b_1 \\) in the vector space.\n",
+    "   - The first orthogonal vector \\( b_1^* \\) is the same as \\( b_1 \\) because there are no preceding vectors to orthogonalize against.\n",
+    "\n",
+    "2. **Second Vector (\\( b_2^* \\))**:\n",
+    "   - The second orthogonal vector \\( b_2^* \\) is computed by removing the projection of \\( b_2 \\) onto \\( b_1^* \\):\n",
+    "     \\[\n",
+    "     b_2^* = b_2 - \\text{proj}_{b_1^*}(b_2)\n",
+    "     \\]\n",
+    "     where:\n",
+    "     \\[\n",
+    "     \\text{proj}_{b_1^*}(b_2) = \\frac{\\langle b_2, b_1^* \\rangle}{\\| b_1^* \\|^2} b_1^*\n",
+    "     \\]\n",
+    "   - This ensures \\( b_2^* \\) is orthogonal to \\( b_1^* \\), making the angle between them \\( 90^\\circ \\).\n",
+    "\n",
+    "3. **General Step (\\( b_k^* \\))**:\n",
+    "   - For any \\( b_k^* \\), remove projections onto all previously orthogonalized vectors \\( b_1^*, b_2^*, \\ldots, b_{k-1}^* \\):\n",
+    "     \\[\n",
+    "     b_k^* = b_k - \\sum_{j=1}^{k-1} \\text{proj}_{b_j^*}(b_k)\n",
+    "     \\]\n",
+    "   - After this step, \\( b_k^* \\) is orthogonal to all \\( b_1^*, b_2^*, \\ldots, b_{k-1}^* \\).\n",
+    "\n",
+    "4. **Orthogonality Check**:\n",
+    "   - After orthogonalization:\n",
+    "     \\[\n",
+    "     \\langle b_i^*, b_j^* \\rangle = 0 \\quad \\text{for } i \\neq j\n",
+    "     \\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Good vs. Bad Lattice Basis\n",
+    "\n",
+    "#### Characteristics of a Good Basis\n",
+    "- **Short vectors** (small magnitudes).\n",
+    "- Vectors are **nearly orthogonal** (angles close to \\( 90^\\circ \\)).\n",
+    "\n",
+    "#### Characteristics of a Bad Basis\n",
+    "- **Long vectors** (large magnitudes).\n",
+    "- Vectors are **highly non-orthogonal** (angles far from \\( 90^\\circ \\)).\n",
+    "\n",
+    "#### Why It Matters\n",
+    "- In applications like **lattice-based cryptography** or computational problems (e.g., the Shortest Vector Problem), a \"good\" basis makes computation significantly easier.\n",
+    "- The **Gram-Schmidt orthogonalized basis** helps identify the quality of the original basis. Large variations in the magnitudes of \\( b_k^* \\) suggest the original basis is \"bad.\"\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example: Evaluating a Basis\n",
+    "\n",
+    "1. **Start with a Basis**:\n",
+    "   \\[\n",
+    "   \\text{Original Basis: } B = \\{b_1, b_2, b_3\\}\n",
+    "   \\]\n",
+    "\n",
+    "2. **Compute the Orthogonalized Basis**:\n",
+    "   \\[\n",
+    "   \\text{GSO Basis: } B^* = \\{b_1^*, b_2^*, b_3^*\\}\n",
+    "   \\]\n",
+    "\n",
+    "3. **Evaluate**:\n",
+    "   - **Magnitudes** (\\( \\| b_k^* \\| \\)):\n",
+    "     - Large variations in the magnitudes of \\( b_k^* \\) indicate a \"bad\" basis.\n",
+    "   - **Angles**:\n",
+    "     - Check the angles between the original vectors. Angles far from \\( 90^\\circ \\) indicate a \"bad\" basis.\n",
+    "\n",
+    "![how to find b2*](find_b*.png)\n",
+    "---\n",
+    "\n",
+    "### Improving a Bad Basis\n",
+    "- Use algorithms like the **LLL algorithm** (Lenstra-Lenstra-Lovász) to reduce a \"bad\" basis.\n",
+    "- A reduced basis has shorter, nearly orthogonal vectors, making lattice problems easier to solve.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Practical Applications\n",
+    "- Evaluating lattice bases is crucial in **lattice-based cryptography**.\n",
+    "- A good basis improves efficiency in solving problems like:\n",
+    "  - **Shortest Vector Problem (SVP)**\n",
+    "  - **Closest Vector Problem (CVP)**\n",
+    "\n",
+    "![app](app.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projection of \\( b_k \\) Orthogonal to the Span"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **Gram-Schmidt process** involves projecting a vector \\( b_k \\) onto the subspace spanned by the previous orthogonalized vectors \\( b_1^*, b_2^*, \\dots, b_{k-1}^* \\), and then subtracting this projection to make \\( b_k^* \\) orthogonal to that span.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Mathematical Formula\n",
+    "\n",
+    "For a vector \\( b_k \\), the orthogonal projection onto the span of \\( b_1^*, b_2^*, \\dots, b_{k-1}^* \\) is given by:\n",
+    "\n",
+    "\\[\n",
+    "\\pi_{\\text{span}}(b_k) = \\sum_{j=1}^{k-1} \\text{proj}_{b_j^*}(b_k)\n",
+    "\\]\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "\\[\n",
+    "\\text{proj}_{b_j^*}(b_k) = \\frac{\\langle b_k, b_j^* \\rangle}{\\| b_j^* \\|^2} b_j^*\n",
+    "\\]\n",
+    "\n",
+    "The orthogonal component of \\( b_k \\) (denoted \\( b_k^* \\)) is computed as:\n",
+    "\n",
+    "\\[\n",
+    "b_k^* = b_k - \\pi_{\\text{span}}(b_k)\n",
+    "\\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Steps to Compute \\( b_k^* \\)\n",
+    "\n",
+    "1. **Start with \\( b_k \\)**:\n",
+    "   - Begin with the \\( k \\)-th vector from the original basis.\n",
+    "\n",
+    "2. **Project \\( b_k \\) onto each \\( b_j^* \\) (\\( j < k \\))**:\n",
+    "   - Calculate the projection of \\( b_k \\) onto \\( b_j^* \\) using:\n",
+    "     \\[\n",
+    "     \\text{proj}_{b_j^*}(b_k) = \\frac{\\langle b_k, b_j^* \\rangle}{\\| b_j^* \\|^2} b_j^*\n",
+    "     \\]\n",
+    "\n",
+    "3. **Sum All Projections**:\n",
+    "   - Sum the projections to find \\( \\pi_{\\text{span}}(b_k) \\):\n",
+    "     \\[\n",
+    "     \\pi_{\\text{span}}(b_k) = \\sum_{j=1}^{k-1} \\text{proj}_{b_j^*}(b_k)\n",
+    "     \\]\n",
+    "\n",
+    "4. **Compute \\( b_k^* \\)**:\n",
+    "   - Subtract the projection from \\( b_k \\) to get the orthogonal component:\n",
+    "     \\[\n",
+    "     b_k^* = b_k - \\pi_{\\text{span}}(b_k)\n",
+    "     \\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Given the basis:\n",
+    "\\[\n",
+    "B = \\{b_1, b_2, b_3\\}\n",
+    "\\]\n",
+    "\n",
+    "And the already orthogonalized vectors:\n",
+    "\\[\n",
+    "B^* = \\{b_1^*, b_2^*\\}\n",
+    "\\]\n",
+    "\n",
+    "To compute \\( b_3^* \\):\n",
+    "\n",
+    "1. Compute projections:\n",
+    "   \\[\n",
+    "   \\text{proj}_{b_1^*}(b_3) = \\frac{\\langle b_3, b_1^* \\rangle}{\\| b_1^* \\|^2} b_1^*\n",
+    "   \\]\n",
+    "   \\[\n",
+    "   \\text{proj}_{b_2^*}(b_3) = \\frac{\\langle b_3, b_2^* \\rangle}{\\| b_2^* \\|^2} b_2^*\n",
+    "   \\]\n",
+    "\n",
+    "2. Find \\( \\pi_{\\text{span}}(b_3) \\):\n",
+    "   \\[\n",
+    "   \\pi_{\\text{span}}(b_3) = \\text{proj}_{b_1^*}(b_3) + \\text{proj}_{b_2^*}(b_3)\n",
+    "   \\]\n",
+    "\n",
+    "3. Subtract to get \\( b_3^* \\):\n",
+    "   \\[\n",
+    "   b_3^* = b_3 - \\pi_{\\text{span}}(b_3)\n",
+    "   \\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "- The orthogonal component \\( b_k^* \\) is found by removing the part of \\( b_k \\) that lies in the span of \\( \\{b_1^*, b_2^*, \\dots, b_{k-1}^*\\} \\).\n",
+    "- This ensures that \\( b_k^* \\) is orthogonal to all previous vectors in the orthogonalized basis.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Applications\n",
+    "\n",
+    "- **Lattice Basis Reduction**: Identifying orthogonal components is essential in improving lattice bases for cryptography and computational geometry.\n",
+    "- **Numerical Stability**: Ensures better numerical behavior in algorithms requiring orthogonality, like QR decomposition.\n",
+    "\n",
+    "![projections](projections.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![vol(L)](vol.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
